script_examples/vpc_and_ec2_inst/sample_vpc_ec2_inst.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Network Template: Sample template that creates a VPC with DNS and public
  IPs enabled. Also an EC2 Instance with a static website from S3.'
Parameters:
  AmazonLinuxAMIID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: 10.0.0.0/16
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet'
      RouteTableId: !Ref 'PublicRouteTable'
  PublicSubnetNetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet'
      NetworkAclId: !GetAtt 'VPC.DefaultNetworkAcl'
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP ingress
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: Web Server Security Group
  WebServerInstance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          All:
            - ConfigureSampleApp
        ConfigureSampleApp:
          packages:
            yum:
              httpd: []
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref 'AmazonLinuxAMIID'
      NetworkInterfaces:
        - GroupSet:
            - !Ref 'WebServerSecurityGroup'
          AssociatePublicIpAddress: true
          DeviceIndex: 0
          DeleteOnTermination: true
          SubnetId: !Ref 'PublicSubnet'
      Tags:
        - Key: Name
          Value: Web Server
      UserData: !Base64
        Fn::Sub: "#!/bin/bash -xe\nyum update -y aws-cfn-bootstrap\n# Install the\
          \ files and packages from the metadata\n/opt/aws/bin/cfn-init -v --stack\
          \ ${AWS::StackName} --resource WebServerInstance --configsets All --region\
          \ ${AWS::Region}\n# Download Lab files\nwget https://yourbucket.s3.amazonaws.com/your_website.zip\n\
          unzip your_website.zip.zip -d /var/www/html/\n# Signal the status from cfn-init\n\
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerInstance\
          \ --region ${AWS::Region}\n"
    CreationPolicy:
      ResourceSignal:
        Timeout: PT5M
  DiskVolume:
    Type: AWS::EC2::Volume
    Properties:
      Size: 100
      AvailabilityZone: !GetAtt 'WebServerInstance.AvailabilityZone'
      Tags:
        - Key: Name
          Value: Web Data
    DeletionPolicy: Snapshot
  DiskMountPoint:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref 'WebServerInstance'
      VolumeId: !Ref 'DiskVolume'
      Device: /dev/sdh
Outputs:
  URL:
    Description: URL of the sample website
    Value: !Sub 'http://${WebServerInstance.PublicDnsName}'
# Script available at https://github.com/raulFuzita/cct-cloud-services/blob/cloudformation/script_examples/vpc_and_ec2_inst/sample_vpc_ec2_inst.json
